--- a/style.css
+++ b/style.css
@@ -1,74 +1,197 @@
-/* Reset some default styles for consistency */
-body,
-h1,
-h2,
-h3,
-p,
-ul,
-li {
+* {
   margin: 0;
   padding: 0;
 }
 
 body {
-  font-family: Arial, sans-serif;
-  line-height: 1.6;
-  background-color: #f2f2f2;
-}
-
-header {
-  background-color: #333;
-  color: #fff;
-  padding: 20px;
+  background-color: rgb(0, 0, 33);
+  color: white;
+  font-family: "Poppins", sans-serif;
+  position: relative;
 }
 
 nav {
   display: flex;
+  justify-content: space-around;
   align-items: center;
-  justify-content: space-between;
-}
+  background-color: rgb(62, 62, 178);
+  height: 100px;
+  width: 100%;
+  top: 0;
+  position: fixed;
 
-nav h1 {
-  font-size: 24px;
+  margin-bottom: 50px;
 }
 
 nav ul {
-  list-style: none;
   display: flex;
+  justify-content: center;
 }
 
 nav ul li {
-  margin-left: 15px;
+  margin: 0 23px;
+  list-style: none;
+}
+
+.left {
+  font-size: 1.5rem;
+}
+
+.firstSection {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 200px;
+  margin-bottom: 20px;
+  height: 55vh;
+}
+
+.firstSection > div {
+  width: 35%;
+}
+
+.leftSection {
+  /* background-color: red; */
+  font-size: 2rem;
+  margin-left: 250px;
+}
+
+.rightSection > img {
+  border-radius: 100px;
+  box-shadow: 10px 10px 5px rgb(62, 62, 178);
+}
+
+.name {
+  color: rgb(120, 87, 176);
 }
 
 nav ul li a {
-  color: #fff;
   text-decoration: none;
+  color: aliceblue;
 }
 
-main {
-  max-width: 800px;
-  margin: 20px auto;
-  padding: 0 20px;
+nav ul li a:hover {
+  color: aqua;
+  font-size: 1.02rem;
 }
 
-section {
-  margin-bottom: 40px;
+#element {
+  color: rgb(115, 150, 216);
 }
 
-h2 {
-  font-size: 24px;
-  margin-bottom: 10px;
+.fs-2 {
+  background-color: rgb(140, 188, 230);
+  border-radius: 10px;
 }
 
-ul {
-  list-style: disc;
-  margin-left: 20px;
+.icon-square {
+  width: 3rem;
+  height: 3rem;
+  border-radius: 0.75rem;
+}
+
+.inst {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.detail,
+.gpa {
+  font-size: 15px;
+  list-style: none;
+  font-style: italic;
+}
+
+.gpa {
+  font-style: normal;
+  font-weight: bold;
+}
+
+.badge {
+  padding: 20px;
+  margin: 20px;
+  border: 20px;
+}
+
+.pb-2 {
+  font-weight: bold;
+}
+
+.box {
+  margin: auto;
+  /* padding:100px; */
+  height: 180px;
+  margin-top: 20px;
+
+  border-radius: 20px;
+  background-color: rgba(159, 182, 202, 0.354);
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.box1 {
+  margin: 0px 50px;
+  padding: 50px;
+  /* background-color: red; */
+}
+
+.box2 {
+  margin: 0px 50px;
+  padding: 50px;
+}
+
+.summary {
+  font-size: 20px;
+  font-weight: bold;
+  color: rgb(255, 252, 252);
+}
+
+#skills,
+#projects {
+  margin-top: -100px;
+  padding-top: 80px;
+}
+.resume-github {
+  margin-top: 10px;
 }
 
 footer {
-  background-color: #333;
-  color: #fff;
+  background-color: rgb(62, 62, 178);
+
+  height: 140px;
+  width: 100%;
   padding: 10px;
+}
+
+.footer-head {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer-list,
+.footer-list ul li {
+  display: flex;
+  background-color: inherit;
+  list-style: none;
+}
+
+.img {
+  border-radius: 5px;
+  margin: 5px 8px;
+}
+
+.heading {
+  margin-left: 45px;
+}
+
+.footer-bottom {
   text-align: center;
+  margin-left: 40px;
+  margin-bottom: 0px;
+}
+.name1 {
+  color: blanchedalmond;
 }
