--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ nav {
   width: 100%;
   top: 0;
   position: fixed;
-
   margin-bottom: 50px;
 }
 
@@ -41,8 +40,10 @@ nav ul li {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin-top: 200px;
+  margin-top: 100px;
   margin-bottom: 20px;
+  padding-top: 200px;
+
   height: 55vh;
 }
 
