--- a/style.css
+++ b/style.css
@@ -8,8 +8,21 @@ body {
   color: white;
   font-family: "Poppins", sans-serif;
   position: relative;
+  background: linear-gradient(300deg, #1468c7, #01182e, #fa8a7b);
+  background-size: 180% 180%;
+  animation: gradient-animation 18s ease infinite;
 }
-
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 nav {
   display: flex;
   justify-content: space-around;
