--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   color: white;
   font-family: "Poppins", sans-serif;
   position: relative;
-  background: linear-gradient(300deg, #1468c7, #01182e, #fa8a7b);
+  background: linear-gradient(300deg, #e7edf3, #0d1717, #2a43b3);
   background-size: 180% 180%;
   animation: gradient-animation 18s ease infinite;
 }
